--- a/EjemplosProyectos/CSS/main.css
+++ b/EjemplosProyectos/CSS/main.css
@@ -4,3 +4,15 @@
     --gridList-gap: 6px;
 }
 
+* {
+    margin: 0;
+    top: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    
+}
