--- a/EjemplosProyectos/CSS/main.css
+++ b/EjemplosProyectos/CSS/main.css
@@ -127,3 +127,100 @@ h1{
 .card:hover:nth-child(5n + 5) {
     box-shadow: 0 0 0 var(--cardShadow-size) var(--brand-color_5);
 }
+
+.card:hover:nth-child(5n + 1) h4{
+    background-color: var(--brand-color_1);
+    color: white;
+}
+
+.card:hover:nth-child(5n + 2) h4{
+    background-color: var(--brand-color_2);
+    color: white;
+}
+
+.card:hover:nth-child(5n + 3) h4{
+    background-color: var(--brand-color_3);
+    color: white;
+}
+
+.card:hover:nth-child(5n + 4) h4{
+    background-color: var(--brand-color_4);
+    color: white;
+}
+
+.card:hover:nth-child(5n + 5) h4{
+    background-color: var(--brand-color_5);
+    color: white;
+}
+
+.card:nth-child(11n + 1){
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.card:nth-child(8n + 1){
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.card:nth-child(10n + 3){
+    grid-column: span 2;
+    grid-row: span 1;
+}
+
+.search{
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    margin: 16px 0;
+}
+
+.search-input{
+    font-size: 1rem;
+    width: 100%;
+    height: 44px;
+    border: 0;
+    padding: 8px 16px;
+}
+
+.search-submit{
+    background-color: red;
+    border: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 44px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+    backface-visibility: hidden;
+    color: #fff;
+}
+
+.search-input:hover{
+    opacity: 0.7;
+}
+
+@media screen and (max-width: 45rem) {
+    .card:nth-child(11n + 1),
+    .card:nth-child(8n + 1),
+    .card:nth-child(10n + 3) {
+        grid-column: span 1;
+        grid-row: span 1;
+    }   
+}
+
+@media screen and (min-width: 37.5rem){
+    :root{
+        --gridList-column: 180px;
+        --gridList-rows: 200px;
+    }
+}
+
+@media screen and (min-width: 60rem){
+    :root{
+        --gridList-column: 300px;
+        --gridList-rows: 210px;
+    }
+}
